--- a/KDTree.Benchmark/KDTree.Benchmark.csproj
+++ b/KDTree.Benchmark/KDTree.Benchmark.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <PropertyGroup>
@@ -15,5 +15,8 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.15.2" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.15.2"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KDTree\KDTree.csproj" />
   </ItemGroup>
 </Project>
