it didn't seem that adding Span in placed improved anything. sometimes better somtimes worse. that's the end of this branch

--- a/KDTreeTests/KDTreeTests.csproj
+++ b/KDTreeTests/KDTreeTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KDTree\KDTree.csproj" />
+    <ProjectReference Include="..\KDTreeOLD\KDTree.csproj" />
   </ItemGroup>
 
 </Project>
