--- a/KDTree/NearestNeighborSearch.csproj
+++ b/KDTree/NearestNeighborSearch.csproj
@@ -3,11 +3,11 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Version>1.0.22</Version>
-		<Authors>Eric Regina, Matt Campbell</Authors>
+		<Authors>Matt Campbell</Authors>
 		<Company>N/A</Company>
-		<PackageId>Supercluster.KDTree.Net</PackageId>
-		<Description>A high-performance, generalized K-D Tree implementation for fast spatial searches.</Description>
-		<PackageTags>kdtree k-d-tree nearest-neighbor spatial search</PackageTags>
+		<PackageId>NearestSearch</PackageId>
+		<Description>Methods to find the nearest neighbors in an n-Dimensional search space.</Description>
+		<PackageTags>kdtree k-d-tree nearest-neighbor spatial search voxel linear</PackageTags>
 		<PackageProjectUrl>https://github.com/micampbell/Supercluster.KDTree</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/micampbell/Supercluster.KDTree.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
@@ -18,7 +18,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
