adding some switching conditions when inputs are too large seems to help with benchmarking and applications

--- a/NearestNeighborTests/NearestNeighborTests.csproj
+++ b/NearestNeighborTests/NearestNeighborTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KDTree\NearestNeighborSearch.csproj" />
+    <ProjectReference Include="..\NearestNeighbor\NearestNeighborSearch.csproj" />
   </ItemGroup>
 
 </Project>
