--- a/NearestNeighbor.Benchmark/NearestNeighborSearch.Benchmark.csproj
+++ b/NearestNeighbor.Benchmark/NearestNeighborSearch.Benchmark.csproj
@@ -17,6 +17,6 @@
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.15.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KDTree\NearestNeighborSearch.csproj" />
+    <ProjectReference Include="..\NearestNeighbor\NearestNeighborSearch.csproj" />
   </ItemGroup>
 </Project>
